# decancer

./: .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .npmignore  .prettierignore  .prettierrc.js  .prettierrc.json  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  a.txt  constants.js  decancer.d.ts  decancer.js  decancer.min.js  index.d.ts  index.html  index.js  index.json  jitpack.yml  main.d.ts  main.js  mod.ts  napi.bat  package-lock.json  package.json  prepare.js  test_deno.ts  tsconfig.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: CI.yml  commit.yml  node.yml  prettier.yml  sync_readme.yml  wasm.yml
__tests__/: decancer.test.ts  deno.ts
bindings/go/: README.md  decancer.go  decancer_retain_test.go  decancer_test.go  go.mod
bindings/java/: .cargo  Cargo.toml  CuredString.h  build.gradle  extract_bindings.ps1  gradlew  gradlew.bat
bindings/java/.cargo/: config.toml
bindings/java/src/: errors.rs  lib.rs  util.rs
bindings/java/src/main/java/com/github/null8626/decancer/: CuredString.java  Match.java  Options.java
bindings/java/src/main/java/io/github/null8626/decancer/: CuredString.java  Match.java  Options.java  package-info.java
bindings/java/src/test/java/com/github/null8626/decancer/: DecancerTest.java
bindings/java/src/test/java/io/github/null8626/decancer/: DecancerTest.java  DecancerTests.java  retain_data.json
bindings/java/src/test/resources/: retain_data.json
bindings/native/: .clang-format  CMakeLists.txt  Cargo.toml  Doxyfile  README.md  build.rs  decancer.cpp  decancer.h  decancer.hpp  decancer.rc  m.bat  test.c  test.cpp
bindings/native/.cargo/: config.toml
bindings/native/docs/: Doxyfile  docgen.mjs  header.html  script.js  search.css  style.css
bindings/native/docs/doxygen-awesome-css/: doxygen-awesome-darkmode-toggle.js  doxygen-awesome-fragment-copy-button.js  doxygen-awesome-interactive-toc.js  doxygen-awesome-paragraph-link.js  doxygen-awesome-tabs.js
bindings/native/docs/doxygen-awesome-css/doxygen-custom/: toggle-alternative-theme.js
bindings/native/src/: lib.rs  ptr.rs  unicode.rs  utf16.rs  utf8.rs  util.rs
bindings/native/tests/: CMakeLists.txt  extra_tests.c  retain_data.h  test.mjs
bindings/node/: .npmignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  retain_data.json  rustfmt.toml  test.cjs  tsconfig.json  typings.d.ts
bindings/node/npm/android-arm-eabi/: README.md  package.json
bindings/node/npm/android-arm64/: README.md  package.json
bindings/node/npm/darwin-arm64/: README.md  package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/freebsd-x64/: README.md  package.json
bindings/node/npm/linux-arm-gnueabihf/: package.json
bindings/node/npm/linux-arm64-gnu/: README.md  package.json
bindings/node/npm/linux-arm64-musl/: README.md  package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/linux-x64-musl/: package.json
bindings/node/npm/win32-arm64-msvc/: package.json
bindings/node/npm/win32-ia32-msvc/: package.json
bindings/node/npm/win32-x64-msvc/: README.md  package.json
bindings/node/src/: lib.js  lib.rs  lib.ts  typings.d.ts
bindings/wasm/: Cargo.toml  package.json  retain_data.json  vite.config.js
bindings/wasm/src/: glue.js  lib.rs
bindings/wasm/tests/: index.html  index.mjs  package.json  retain_data.json  server.mjs
contrib/: STRUCTURE.txt  cancer.mjs  index.mjs  reader.mjs  writer.mjs
core/: Cargo.toml  README.md  build.rs  rustfmt.toml
core/benches/: decancer_bench.rs
core/src/: codepoints.rs  confusables.rs  contains.rs  encoding.rs  leetspeak.rs  lib.rs  matcher.rs  options.rs  retain_tests.rs  similar.rs  string.rs  test.rs  tests.rs  translation.rs  utf16.rs  utf32.rs  utf8.rs  util.rs
core/src/bidi/: brackets.rs  class.rs  level.rs  mod.rs  paragraph.rs
core/src/tests/: mod.rs  serde.rs
native/: Cargo.toml  decancer.h  rustfmt.toml
native/src/: lib.rs  utf16.rs  utf8.rs
node/: .npmignore  Cargo.toml  README.md  add.txt  package.json  s.js  tsconfig.json
node/npm/android-arm-eabi/: package.json
node/npm/android-arm64/: package.json
node/npm/darwin-arm64/: package.json
node/npm/darwin-x64/: README.md  package.json
node/npm/freebsd-x64/: README.md  package.json
node/npm/linux-arm-gnueabihf/: README.md  package.json
node/npm/linux-arm64-gnu/: package.json
node/npm/linux-arm64-musl/: package.json
node/npm/linux-x64-gnu/: README.md  package.json
node/npm/linux-x64-musl/: README.md  package.json
node/npm/win32-arm64-msvc/: README.md  package.json
node/npm/win32-ia32-msvc/: package.json
node/npm/win32-x64-msvc/: README.md  package.json
node/src/: lib.rs  lib.ts  typings.d.ts
npm/android-arm-eabi/: package.json
npm/android-arm64/: package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: package.json
npm/freebsd-x64/: package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: package.json
scripts/: check_binary.mjs  ci_artifacts.mjs  ci_native_artifacts.mjs  ci_pages_gitignore.mjs  ci_pages_remove.mjs  ci_pretty.mjs  ci_readme.mjs  ci_retain_tests.mjs  ci_setup.mjs  ci_setup_java.mjs  ci_setup_pages.mjs  ci_validate_java_artifacts.mjs  constants.mjs  decode.mjs  encode.mjs  from.mjs  install.mjs  minify.mjs  pretty.mjs  read.mjs  readme.mjs  setup_go_binding.go  synchronizeReadme.mjs  update_unicode.mjs  util.mjs  version.mjs  write.mjs
src/: alphabet.rs  confusables.rs  emojis.rs  encoding.rs  lib.js  lib.rs  lib.ts  misc.rs  parser.rs
wasm/: Cargo.toml  decancer.js  mod.ts  typings.d.ts
wasm/src/: lib.rs
