[package]
name = "decancer"
version = "4.0.0"
edition = "2024"
authors = ["null (https://github.com/null8626)"]
description = "A library that removes common unicode confusables/homoglyphs from strings."
readme = "README.md"
repository = "https://github.com/null8626/decancer"
license = "MIT"
keywords = ["security", "unicode", "homoglyphs", "moderation", "confusables"]
categories = ["parsing", "text-processing", "value-formatting"]
exclude = ["rustfmt.toml"]
rust-version = "1.87.0"

[dependencies]
serde = { version = "1", default-features = false, optional = true }
regex = { version = "1", default-features = false, features = ["std", "perf"], optional = true }

[features]
default = ["options", "separators", "leetspeak"]
serde = ["dep:serde"]
options = []
separators = []
leetspeak = ["regex"]

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }
criterion = { version = "0.8", default-features = false }
rand = "0.10"
censor = "0.3"

[[bench]]
name = "decancer_bench"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[profile.release]
lto = true

[lints.rust]
unsafe_code = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }