[package]
name = "decancer_native"
version = "1.5.0"
edition = "2021"
authors = ["null (https://github.com/null8626)"]
description = "A Rust module that removes common confusables from strings without the use of Regexes."
repository = "https://github.com/null8626/decancer"
license = "MIT"
keywords = ["unicode", "string", "moderation", "confusables"]
publish = false

[lib]
name = "decancer"
crate-type = ["cdylib"]

[dependencies]
decancer = { path = "../core" }