[package]
name = "decancer_native"
version = "1.5.3"
edition = "2021"
authors = ["null (https://github.com/null8626)"]
description = "A tiny package that removes common confusables from strings."
repository = "https://github.com/null8626/decancer"
license = "MIT"
keywords = ["unicode", "string", "moderation", "confusables"]
publish = false

[features]
default = ["utf8", "utf16"]
utf8 = []
utf16 = []

[lib]
name = "decancer"
crate-type = ["cdylib"]

[dependencies]
decancer = { path = "../core" }