[package]
name = "decancer_wasm"
version = "1.4.2"
edition = "2021"
authors = ["null (https://github.com/null8626)"]
description = "A Rust module that removes common confusables from strings without the use of Regexes."
repository = "https://github.com/null8626/decancer"
license = "MIT"
keywords = ["unicode", "string", "moderation", "confusables"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.81"
decancer = { path = "../core" }