[package]
name = "decancer_java"
version = "2.0.2"
edition = "2024"
publish = false

[lib]
name = "decancer"
crate-type = ["cdylib"]

[dependencies]
decancer = { path = "../../core" }
jni = "0.21"

[profile.release]
lto = true

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_safety_doc = "allow"
unused_unit = "allow"


# TODO: Add manual bounds checking
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"