[package]
name = "decancer_native"
version = "3.2.0"
edition = "2021"
publish = false

[lib]
name = "decancer"
crate-type = ["cdylib"]

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast-lossless = "allow"
cast-possible-truncation = "allow"
cast-possible-wrap = "allow"
missing-panics-doc = "allow"
single-match-else = "allow"

[dependencies]
decancer = { path = "../../core", default-features = false }
paste = "1"

[features]
default = ["options", "leetspeak"]
options = ["decancer/options"]
leetspeak = ["decancer/leetspeak"]