[package]
name = "decancer_native"
version = "3.3.3"
edition = "2024"
publish = false

[lib]
name = "decancer"
crate-type = ["cdylib"]

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast-lossless = "allow"
cast-possible-truncation = "allow"
cast-possible-wrap = "allow"
missing-panics-doc = "allow"
missing-safety-doc = "allow"
missing-transmute-annotations = "allow"
single-match-else = "allow"

[dependencies]
decancer = { path = "../../core", default-features = false }

[target."cfg(windows)".build-dependencies]
embed-resource = "2"

[features]
default = ["options", "separators", "leetspeak", "utf8", "utf16"]
utf8 = []
utf16 = []
options = ["decancer/options"]
separators = ["decancer/separators"]
leetspeak = ["decancer/leetspeak"]

[profile.release]
lto = true