[package]
name = "decancer_native"
version = "3.3.3"
edition = "2024"
publish = false

[lib]
name = "decancer"
crate-type = ["cdylib"]

[dependencies]
decancer = { path = "../../core", default-features = false }

[target."cfg(windows)".build-dependencies]
embed-resource = "2"

[features]
default = ["options", "separators", "leetspeak", "utf8", "utf16"]
utf8 = []
utf16 = []
options = ["decancer/options"]
separators = ["decancer/separators"]
leetspeak = ["decancer/leetspeak"]

[profile.release]
lto = true

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_safety_doc = "allow"