[package]
name = "decancer_node"
version = "1.6.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false }
napi-derive = { version = "2", default-features = false }
decancer = { path = "../../core" } 

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true