[package]
name = "decancer_node"
version = "3.3.3"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false }
napi-derive = { version = "3", default-features = false, features = ["type-def"] }
decancer = { path = "../../core" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true