[package]
name = "decancer_node"
version = "3.3.3"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false }
napi-derive = { version = "3", default-features = false, features = ["type-def"] }
decancer = { path = "../../core" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"