[package]
name = "decancer_wasm"
version = "3.3.3"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
decancer = { path = "../../core" }
wasm-bindgen = { version = "0.2.9", default-features = false, features = ["std"] }
console_error_panic_hook = "0.1.7"

[profile.release]
lto = true

[lints.rust]
non_snake_case = "allow"
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
must_use_candidate = "allow"